--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,20 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="var" path="GWT_HOME/gwt-user.jar"/>
+	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/postgresql-8.4-701.jdbc4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-core-4.1.6.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-entitymanager-4.1.6.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-core-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-orm-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-jdbc-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-aop-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-asm-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-beans-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-context-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-tx-3.2.0.M1.jar"/>
+	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
