hibernate and spring now work

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,6 +1,6 @@
 # DB params.
 jdbc.url=jdbc:postgresql://127.0.0.1/expsysdb
-jdbc.username=expsys
+jdbc.username=postgres
 jdbc.password=qwerty
 
 # Mailer params.
