Last tries with GWT RequestFactory and Spring. I give up.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -34,6 +34,11 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.rpc</url-pattern>
 	</servlet-mapping>
+	
+	<servlet-mapping>
+    <servlet-name>spring</servlet-name>
+    <url-pattern>/gwtRequest</url-pattern>
+  </servlet-mapping>
 
 	<!-- Default page to serve -->
 	<welcome-file-list>
