--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,16 @@
 <classpath>
 	<classpathentry excluding="imaing/expsys/server/olddao/CharacteristicDao.java|imaing/expsys/server/olddao/CharacteristicRepository.java|imaing/expsys/server/olddao/FuzzyClassDao.java|imaing/expsys/server/olddao/FuzzyClassRepository.java|imaing/expsys/server/olddao/FuzzyClassRepositoryImpl.java|imaing/expsys/server/olddao/ProdChrstcDao.java|imaing/expsys/server/olddao/ProdChrstcRepository.java|imaing/expsys/server/olddao/ProdChrstcRepositoryImpl.java|imaing/expsys/server/olddao/ProductDao.java|imaing/expsys/server/olddao/ProductRepository.java|imaing/expsys/server/olddao/ProductRepositoryImpl.java|imaing/expsys/server/olddao/ShopOwnerDao.java|imaing/expsys/server/olddao/ShopOwnerRepository.java|imaing/expsys/server/olddao/ShopOwnerRepositoryImpl.java|imaing/expsys/server/olddao/CharacteristicRepositoryImpl.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="src" path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/gwt"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="GWT_HOME/gwt-user.jar"/>
-	<classpathentry kind="src" path="config"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-core-4.1.6.Final.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-entitymanager-4.1.6.Final.jar"/>
@@ -43,5 +48,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-validator-4.0.2.GA.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/validation-api-1.1.0.Alpha1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/postgresql-9.0-801.jdbc4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/requestfactory-server.jar" sourcepath="/home/ivan444/development/gwt/requestfactory-server+src.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/requestfactory-apt.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
