--- a/.classpath
+++ b/.classpath
@@ -43,5 +43,8 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-validator-4.0.2.GA.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/validation-api-1.1.0.Alpha1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/postgresql-9.0-801.jdbc4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-test-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/spring-expression-3.2.0.M1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/cglib-nodep-2.2.3.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
